--- a/SrikarBiotech/test-output-reports/LoggerReport/dashboard.html
+++ b/SrikarBiotech/test-output-reports/LoggerReport/dashboard.html
@@ -83,7 +83,7 @@
 							<div class="navbar-text nav-title flex" id="pageTitle">Dashboard</div>
 							<ul class="nav nav-xs flex-row no-border pull-right">
 <li><a href="#" class="b-l"><span class="badge badge-pull">ExtentReports</span></a></li>
-<li><a href="#" class="b-l"><span class="badge badge-pull">May 14, 2024 02:14:23 pm</span></a></li>
+<li><a href="#" class="b-l"><span class="badge badge-pull">May 14, 2024 05:12:09 pm</span></a></li>
 <li><a href="#" class="b-l"><span class="badge badge-pull">4.0</span></a></li>
 							</ul>
 						</div>
@@ -111,10 +111,10 @@
 						<span class="">Scenarios</span>
 					</div>
 					<div class="py-3 text-center text-md text-primary">
-						9
+						2
 					</div>
 					<div class="d-flex">
-						<span class="flex text-muted">Out of which 9 passed</span>
+						<span class="flex text-muted">Out of which 2 passed</span>
 						<span><i class="fa fa-circle-o text-primary"></i> 100.00%</span>
 					</div>
 				</div>
@@ -125,7 +125,7 @@
 						<span class="">Start</span>
 					</div>
 					<div class="py-3 text-center text-md">
-						May 14, 2024 02:14:23 pm
+						May 14, 2024 05:12:09 pm
 					</div>
 					<div class="d-flex">
 						<span class="flex"></span>
@@ -139,7 +139,7 @@
 						<span class="">Time Taken</span>
 					</div>
 					<div class="py-3 text-center text-md">
-						0h 7m 11s+177ms
+						0h 2m 28s+588ms
 					</div>
 					<div class="d-flex">
 						<span class="flex"></span>
@@ -195,7 +195,7 @@
 						</div>
 					</div>
 					<div class="box-footer">
-						<small class="text-muted">9 passed, 0 failed and 0 skipped</small>
+						<small class="text-muted">2 passed, 0 failed and 0 skipped</small>
 					</div>
 				</div>
 			</div>
@@ -221,7 +221,7 @@
 						</div>
 					</div>
 					<div class="box-footer">
-						<small class="text-muted">168 passed, 0 failed and 0 skipped</small>
+						<small class="text-muted">52 passed, 0 failed and 0 skipped</small>
 					</div>
 				</div>
 			</div>
@@ -253,13 +253,13 @@
 						</tr>
 						<tr>
 							<td>@FeatureGroup_Requirement</td>
-							<td>9</td>
+							<td>2</td>
 							<td>0</td>
 							<td>0</td>
 						</tr>
 						<tr>
-							<td>@Users</td>
-							<td>9</td>
+							<td>@Roles1234</td>
+							<td>2</td>
 							<td>0</td>
 							<td>0</td>
 						</tr>
@@ -320,7 +320,7 @@
 			                datasets: [{
 			                    borderColor: 'transparent',
 			                    data: [
-			                    	9, 0, 0, 0, 0, 0
+			                    	2, 0, 0, 0, 0, 0
 			                    ],
 			                    backgroundColor: [
 			                        "#00af00", "#F7464A", "#8b0000", "#ff6347", "#FDB45C", "#1e90ff"
@@ -355,7 +355,7 @@
 			                datasets: [{
 			                    borderColor: 'transparent',
 			                    data: [
-			                    	168, 0, 0, 0, 0, 0
+			                    	52, 0, 0, 0, 0, 0
 			                    ],
 			                    backgroundColor: [
 			                        "#00af00", "#F7464A", "#8b0000", "#ff6347", "#FDB45C", "#1e90ff"
@@ -383,7 +383,7 @@
 		})();
 	})
     var timeline = {
-"feature to Test User Screen functionality":422.617    };
+"feature to Test Roles Screen functionality":142.087    };
     function getRandomColor() {
         var letters = '0123456789ABCDEF';
         var color = '#';
