--- a/SrikarBiotech/test-output-reports/LoggerReport/tag.html
+++ b/SrikarBiotech/test-output-reports/LoggerReport/tag.html
@@ -102,12 +102,12 @@
 						<div class="list-body">
 							<a href="#" class="item-title _500">@FeatureGroup_Requirement</a>
 							<div class="item-except text-sm text-muted h-1x">
-								10 tests
+								3 tests
 							</div>
 							<div class="tc d-none">
 								<h5>@FeatureGroup_Requirement</h5>
 								<div class="mb-4">
-									<span class="badge pass text-pass">9 passed</span>
+									<span class="badge pass text-pass">2 passed</span>
 									<span class="badge pass text-fail">0 failed</span>
 									<span class="badge pass text-skip">0 skipped</span>
 								</div>
@@ -124,8 +124,8 @@
 	
 <tr class="s-pass" test-id="1" parent-id="1">
 	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">feature to Test User Screen functionality </td>
-	<td>0h 7m 2s+617msc</td>
+	<td class="_600">feature to Test Roles Screen functionality </td>
+	<td>0h 2m 22s+87msc</td>
 	<td>		<span class="category-list attr-x">
 		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
 		</span>
@@ -137,11 +137,11 @@
 	
 <tr class="s-pass" test-id="2" parent-id="1">
 	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Validate login is successful with valid credentials <br/><span class="text-muted text-sm">feature to Test User Screen functionality</span></td>
-	<td>0h 0m 17s+165msc</td>
+	<td class="_600">Verify the Add Sales Head Role functionality <br/><span class="text-muted text-sm">feature to Test Roles Screen functionality</span></td>
+	<td>0h 1m 1s+952msc</td>
 	<td>		<span class="category-list attr-x">
 		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @Users</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @Roles1234</span>
 		</span>
 </td>
 	<td>
@@ -149,111 +149,13 @@
 	<td class="static"><i class="static fa fa-external-link"></i></td>
 </tr>
 	
-<tr class="s-pass" test-id="13" parent-id="1">
+<tr class="s-pass" test-id="29" parent-id="1">
 	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Validate user click on the Users screen in menu <br/><span class="text-muted text-sm">feature to Test User Screen functionality</span></td>
-	<td>0h 0m 22s+912msc</td>
+	<td class="_600">Verify the Add Sales Person Role functionality <br/><span class="text-muted text-sm">feature to Test Roles Screen functionality</span></td>
+	<td>0h 1m 14s+54msc</td>
 	<td>		<span class="category-list attr-x">
 		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @Users</span>
-		</span>
-</td>
-	<td>
-	</td>
-	<td class="static"><i class="static fa fa-external-link"></i></td>
-</tr>
-	
-<tr class="s-pass" test-id="26" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Validate Add user without enter the data <br/><span class="text-muted text-sm">feature to Test User Screen functionality</span></td>
-	<td>0h 0m 33s+620msc</td>
-	<td>		<span class="category-list attr-x">
-		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @Users</span>
-		</span>
-</td>
-	<td>
-	</td>
-	<td class="static"><i class="static fa fa-external-link"></i></td>
-</tr>
-	
-<tr class="s-pass" test-id="47" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Verify the Add user functionality <br/><span class="text-muted text-sm">feature to Test User Screen functionality</span></td>
-	<td>0h 1m 28s+173msc</td>
-	<td>		<span class="category-list attr-x">
-		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @Users</span>
-		</span>
-</td>
-	<td>
-	</td>
-	<td class="static"><i class="static fa fa-external-link"></i></td>
-</tr>
-	
-<tr class="s-pass" test-id="92" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Verifying the Cancel button functionality <br/><span class="text-muted text-sm">feature to Test User Screen functionality</span></td>
-	<td>0h 0m 34s+285msc</td>
-	<td>		<span class="category-list attr-x">
-		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @Users</span>
-		</span>
-</td>
-	<td>
-	</td>
-	<td class="static"><i class="static fa fa-external-link"></i></td>
-</tr>
-	
-<tr class="s-pass" test-id="111" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Verification of the Added user is displayed in the grid <br/><span class="text-muted text-sm">feature to Test User Screen functionality</span></td>
-	<td>0h 0m 39s+631msc</td>
-	<td>		<span class="category-list attr-x">
-		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @Users</span>
-		</span>
-</td>
-	<td>
-	</td>
-	<td class="static"><i class="static fa fa-external-link"></i></td>
-</tr>
-	
-<tr class="s-pass" test-id="132" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Verify the Update user functionality <br/><span class="text-muted text-sm">feature to Test User Screen functionality</span></td>
-	<td>0h 1m 9s+902msc</td>
-	<td>		<span class="category-list attr-x">
-		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @Users</span>
-		</span>
-</td>
-	<td>
-	</td>
-	<td class="static"><i class="static fa fa-external-link"></i></td>
-</tr>
-	
-<tr class="s-pass" test-id="157" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Verify the Delete user functionality <br/><span class="text-muted text-sm">feature to Test User Screen functionality</span></td>
-	<td>0h 0m 35s+609msc</td>
-	<td>		<span class="category-list attr-x">
-		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @Users</span>
-		</span>
-</td>
-	<td>
-	</td>
-	<td class="static"><i class="static fa fa-external-link"></i></td>
-</tr>
-	
-<tr class="s-pass" test-id="176" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Verify the Pagination functionality <br/><span class="text-muted text-sm">feature to Test User Screen functionality</span></td>
-	<td>0h 0m 37s+235msc</td>
-	<td>		<span class="category-list attr-x">
-		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @Users</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @Roles1234</span>
 		</span>
 </td>
 	<td>
@@ -266,20 +168,20 @@
 						</div>
 						<div>
 							<span class="item-meta text-xs lt">
-							<span class="badge pass text-pass">9</span> <span class="badge fail text-fail">0</span> <span class="badge skip text-skip">0</span>
+							<span class="badge pass text-pass">2</span> <span class="badge fail text-fail">0</span> <span class="badge skip text-skip">0</span>
 							</span>
 						</div>
 					</div>
 					<div class="list-item attr">
 						<div class="list-body">
-							<a href="#" class="item-title _500">@Users</a>
+							<a href="#" class="item-title _500">@Roles1234</a>
 							<div class="item-except text-sm text-muted h-1x">
-								9 tests
+								2 tests
 							</div>
 							<div class="tc d-none">
-								<h5>@Users</h5>
+								<h5>@Roles1234</h5>
 								<div class="mb-4">
-									<span class="badge pass text-pass">9 passed</span>
+									<span class="badge pass text-pass">2 passed</span>
 									<span class="badge pass text-fail">0 failed</span>
 									<span class="badge pass text-skip">0 skipped</span>
 								</div>
@@ -296,11 +198,11 @@
 	
 <tr class="s-pass" test-id="2" parent-id="1">
 	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Validate login is successful with valid credentials <br/><span class="text-muted text-sm">feature to Test User Screen functionality</span></td>
-	<td>0h 0m 17s+165msc</td>
+	<td class="_600">Verify the Add Sales Head Role functionality <br/><span class="text-muted text-sm">feature to Test Roles Screen functionality</span></td>
+	<td>0h 1m 1s+952msc</td>
 	<td>		<span class="category-list attr-x">
 		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @Users</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @Roles1234</span>
 		</span>
 </td>
 	<td>
@@ -308,111 +210,13 @@
 	<td class="static"><i class="static fa fa-external-link"></i></td>
 </tr>
 	
-<tr class="s-pass" test-id="13" parent-id="1">
+<tr class="s-pass" test-id="29" parent-id="1">
 	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Validate user click on the Users screen in menu <br/><span class="text-muted text-sm">feature to Test User Screen functionality</span></td>
-	<td>0h 0m 22s+912msc</td>
+	<td class="_600">Verify the Add Sales Person Role functionality <br/><span class="text-muted text-sm">feature to Test Roles Screen functionality</span></td>
+	<td>0h 1m 14s+54msc</td>
 	<td>		<span class="category-list attr-x">
 		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @Users</span>
-		</span>
-</td>
-	<td>
-	</td>
-	<td class="static"><i class="static fa fa-external-link"></i></td>
-</tr>
-	
-<tr class="s-pass" test-id="26" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Validate Add user without enter the data <br/><span class="text-muted text-sm">feature to Test User Screen functionality</span></td>
-	<td>0h 0m 33s+620msc</td>
-	<td>		<span class="category-list attr-x">
-		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @Users</span>
-		</span>
-</td>
-	<td>
-	</td>
-	<td class="static"><i class="static fa fa-external-link"></i></td>
-</tr>
-	
-<tr class="s-pass" test-id="47" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Verify the Add user functionality <br/><span class="text-muted text-sm">feature to Test User Screen functionality</span></td>
-	<td>0h 1m 28s+173msc</td>
-	<td>		<span class="category-list attr-x">
-		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @Users</span>
-		</span>
-</td>
-	<td>
-	</td>
-	<td class="static"><i class="static fa fa-external-link"></i></td>
-</tr>
-	
-<tr class="s-pass" test-id="92" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Verifying the Cancel button functionality <br/><span class="text-muted text-sm">feature to Test User Screen functionality</span></td>
-	<td>0h 0m 34s+285msc</td>
-	<td>		<span class="category-list attr-x">
-		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @Users</span>
-		</span>
-</td>
-	<td>
-	</td>
-	<td class="static"><i class="static fa fa-external-link"></i></td>
-</tr>
-	
-<tr class="s-pass" test-id="111" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Verification of the Added user is displayed in the grid <br/><span class="text-muted text-sm">feature to Test User Screen functionality</span></td>
-	<td>0h 0m 39s+631msc</td>
-	<td>		<span class="category-list attr-x">
-		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @Users</span>
-		</span>
-</td>
-	<td>
-	</td>
-	<td class="static"><i class="static fa fa-external-link"></i></td>
-</tr>
-	
-<tr class="s-pass" test-id="132" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Verify the Update user functionality <br/><span class="text-muted text-sm">feature to Test User Screen functionality</span></td>
-	<td>0h 1m 9s+902msc</td>
-	<td>		<span class="category-list attr-x">
-		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @Users</span>
-		</span>
-</td>
-	<td>
-	</td>
-	<td class="static"><i class="static fa fa-external-link"></i></td>
-</tr>
-	
-<tr class="s-pass" test-id="157" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Verify the Delete user functionality <br/><span class="text-muted text-sm">feature to Test User Screen functionality</span></td>
-	<td>0h 0m 35s+609msc</td>
-	<td>		<span class="category-list attr-x">
-		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @Users</span>
-		</span>
-</td>
-	<td>
-	</td>
-	<td class="static"><i class="static fa fa-external-link"></i></td>
-</tr>
-	
-<tr class="s-pass" test-id="176" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Verify the Pagination functionality <br/><span class="text-muted text-sm">feature to Test User Screen functionality</span></td>
-	<td>0h 0m 37s+235msc</td>
-	<td>		<span class="category-list attr-x">
-		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @Users</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @Roles1234</span>
 		</span>
 </td>
 	<td>
@@ -425,7 +229,7 @@
 						</div>
 						<div>
 							<span class="item-meta text-xs lt">
-							<span class="badge pass text-pass">9</span> <span class="badge fail text-fail">0</span> <span class="badge skip text-skip">0</span>
+							<span class="badge pass text-pass">2</span> <span class="badge fail text-fail">0</span> <span class="badge skip text-skip">0</span>
 							</span>
 						</div>
 					</div>
@@ -456,7 +260,7 @@
 									        </a>
 								        </li>
 <li><a href="#" class="b-l"><span class="badge badge-pull">ExtentReports</span></a></li>
-<li><a href="#" class="b-l"><span class="badge badge-pull">May 14, 2024 02:14:23 pm</span></a></li>
+<li><a href="#" class="b-l"><span class="badge badge-pull">May 14, 2024 05:12:09 pm</span></a></li>
 <li><a href="#" class="b-l"><span class="badge badge-pull">4.0</span></a></li>
 								    </ul>
 								</div>
