--- a/SrikarBiotech/test-output-reports/LoggerReport/tag.html
+++ b/SrikarBiotech/test-output-reports/LoggerReport/tag.html
@@ -102,12 +102,12 @@
 						<div class="list-body">
 							<a href="#" class="item-title _500">@FeatureGroup_Requirement</a>
 							<div class="item-except text-sm text-muted h-1x">
-								9 tests
+								2 tests
 							</div>
 							<div class="tc d-none">
 								<h5>@FeatureGroup_Requirement</h5>
 								<div class="mb-4">
-									<span class="badge pass text-pass">8 passed</span>
+									<span class="badge pass text-pass">1 passed</span>
 									<span class="badge pass text-fail">0 failed</span>
 									<span class="badge pass text-skip">0 skipped</span>
 								</div>
@@ -124,8 +124,8 @@
 	
 <tr class="s-pass" test-id="1" parent-id="1">
 	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">feature to Test the View Collection Screen functionality </td>
-	<td>0h 5m 31s+701msc</td>
+	<td class="_600">feature to test Srikar Biotech login functionality </td>
+	<td>0h 0m 8s+186msc</td>
 	<td>		<span class="category-list attr-x">
 		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
 		</span>
@@ -137,109 +137,11 @@
 	
 <tr class="s-pass" test-id="2" parent-id="1">
 	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Validate login is successful with valid credentials <br/><span class="text-muted text-sm">feature to Test the View Collection Screen functionality</span></td>
-	<td>0h 0m 17s+650msc</td>
+	<td class="_600">Validate login functionality without user credentials <br/><span class="text-muted text-sm">feature to test Srikar Biotech login functionality</span></td>
+	<td>0h 0m 8s+186msc</td>
 	<td>		<span class="category-list attr-x">
 		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @SBPL_View_Collection</span>
-		</span>
-</td>
-	<td>
-	</td>
-	<td class="static"><i class="static fa fa-external-link"></i></td>
-</tr>
-	
-<tr class="s-pass" test-id="13" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Validate user click on the View Collection screen in menu <br/><span class="text-muted text-sm">feature to Test the View Collection Screen functionality</span></td>
-	<td>0h 0m 18s+395msc</td>
-	<td>		<span class="category-list attr-x">
-		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @SBPL_View_Collection</span>
-		</span>
-</td>
-	<td>
-	</td>
-	<td class="static"><i class="static fa fa-external-link"></i></td>
-</tr>
-	
-<tr class="s-pass" test-id="24" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Verify the filter Functionality <br/><span class="text-muted text-sm">feature to Test the View Collection Screen functionality</span></td>
-	<td>0h 0m 48s+916msc</td>
-	<td>		<span class="category-list attr-x">
-		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @SBPL_View_Collection</span>
-		</span>
-</td>
-	<td>
-	</td>
-	<td class="static"><i class="static fa fa-external-link"></i></td>
-</tr>
-	
-<tr class="s-pass" test-id="49" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Verify the Order Accepted functionality <br/><span class="text-muted text-sm">feature to Test the View Collection Screen functionality</span></td>
-	<td>0h 0m 58s+967msc</td>
-	<td>		<span class="category-list attr-x">
-		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @SBPL_View_Collection</span>
-		</span>
-</td>
-	<td>
-	</td>
-	<td class="static"><i class="static fa fa-external-link"></i></td>
-</tr>
-	
-<tr class="s-pass" test-id="82" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">verifying both the column filters functionality and sorting functionality of a table. <br/><span class="text-muted text-sm">feature to Test the View Collection Screen functionality</span></td>
-	<td>0h 0m 28s+509msc</td>
-	<td>		<span class="category-list attr-x">
-		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @SBPL_View_Collection</span>
-		</span>
-</td>
-	<td>
-	</td>
-	<td class="static"><i class="static fa fa-external-link"></i></td>
-</tr>
-	
-<tr class="s-pass" test-id="103" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Verify the User able to view the Collection attachment <br/><span class="text-muted text-sm">feature to Test the View Collection Screen functionality</span></td>
-	<td>0h 0m 51s+872msc</td>
-	<td>		<span class="category-list attr-x">
-		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @SBPL_View_Collection</span>
-		</span>
-</td>
-	<td>
-	</td>
-	<td class="static"><i class="static fa fa-external-link"></i></td>
-</tr>
-	
-<tr class="s-pass" test-id="128" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Verify the Export button functionality <br/><span class="text-muted text-sm">feature to Test the View Collection Screen functionality</span></td>
-	<td>0h 0m 21s+545msc</td>
-	<td>		<span class="category-list attr-x">
-		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @SBPL_View_Collection</span>
-		</span>
-</td>
-	<td>
-	</td>
-	<td class="static"><i class="static fa fa-external-link"></i></td>
-</tr>
-	
-<tr class="s-pass" test-id="141" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Verify the Pagination functionality <br/><span class="text-muted text-sm">feature to Test the View Collection Screen functionality</span></td>
-	<td>0h 0m 45s+990msc</td>
-	<td>		<span class="category-list attr-x">
-		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @SBPL_View_Collection</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @LoginPage123</span>
 		</span>
 </td>
 	<td>
@@ -252,20 +154,20 @@
 						</div>
 						<div>
 							<span class="item-meta text-xs lt">
-							<span class="badge pass text-pass">8</span> <span class="badge fail text-fail">0</span> <span class="badge skip text-skip">0</span>
+							<span class="badge pass text-pass">1</span> <span class="badge fail text-fail">0</span> <span class="badge skip text-skip">0</span>
 							</span>
 						</div>
 					</div>
 					<div class="list-item attr">
 						<div class="list-body">
-							<a href="#" class="item-title _500">@SBPL_View_Collection</a>
+							<a href="#" class="item-title _500">@LoginPage123</a>
 							<div class="item-except text-sm text-muted h-1x">
-								8 tests
+								1 tests
 							</div>
 							<div class="tc d-none">
-								<h5>@SBPL_View_Collection</h5>
+								<h5>@LoginPage123</h5>
 								<div class="mb-4">
-									<span class="badge pass text-pass">8 passed</span>
+									<span class="badge pass text-pass">1 passed</span>
 									<span class="badge pass text-fail">0 failed</span>
 									<span class="badge pass text-skip">0 skipped</span>
 								</div>
@@ -282,109 +184,11 @@
 	
 <tr class="s-pass" test-id="2" parent-id="1">
 	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Validate login is successful with valid credentials <br/><span class="text-muted text-sm">feature to Test the View Collection Screen functionality</span></td>
-	<td>0h 0m 17s+650msc</td>
+	<td class="_600">Validate login functionality without user credentials <br/><span class="text-muted text-sm">feature to test Srikar Biotech login functionality</span></td>
+	<td>0h 0m 8s+186msc</td>
 	<td>		<span class="category-list attr-x">
 		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @SBPL_View_Collection</span>
-		</span>
-</td>
-	<td>
-	</td>
-	<td class="static"><i class="static fa fa-external-link"></i></td>
-</tr>
-	
-<tr class="s-pass" test-id="13" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Validate user click on the View Collection screen in menu <br/><span class="text-muted text-sm">feature to Test the View Collection Screen functionality</span></td>
-	<td>0h 0m 18s+395msc</td>
-	<td>		<span class="category-list attr-x">
-		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @SBPL_View_Collection</span>
-		</span>
-</td>
-	<td>
-	</td>
-	<td class="static"><i class="static fa fa-external-link"></i></td>
-</tr>
-	
-<tr class="s-pass" test-id="24" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Verify the filter Functionality <br/><span class="text-muted text-sm">feature to Test the View Collection Screen functionality</span></td>
-	<td>0h 0m 48s+916msc</td>
-	<td>		<span class="category-list attr-x">
-		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @SBPL_View_Collection</span>
-		</span>
-</td>
-	<td>
-	</td>
-	<td class="static"><i class="static fa fa-external-link"></i></td>
-</tr>
-	
-<tr class="s-pass" test-id="49" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Verify the Order Accepted functionality <br/><span class="text-muted text-sm">feature to Test the View Collection Screen functionality</span></td>
-	<td>0h 0m 58s+967msc</td>
-	<td>		<span class="category-list attr-x">
-		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @SBPL_View_Collection</span>
-		</span>
-</td>
-	<td>
-	</td>
-	<td class="static"><i class="static fa fa-external-link"></i></td>
-</tr>
-	
-<tr class="s-pass" test-id="82" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">verifying both the column filters functionality and sorting functionality of a table. <br/><span class="text-muted text-sm">feature to Test the View Collection Screen functionality</span></td>
-	<td>0h 0m 28s+509msc</td>
-	<td>		<span class="category-list attr-x">
-		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @SBPL_View_Collection</span>
-		</span>
-</td>
-	<td>
-	</td>
-	<td class="static"><i class="static fa fa-external-link"></i></td>
-</tr>
-	
-<tr class="s-pass" test-id="103" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Verify the User able to view the Collection attachment <br/><span class="text-muted text-sm">feature to Test the View Collection Screen functionality</span></td>
-	<td>0h 0m 51s+872msc</td>
-	<td>		<span class="category-list attr-x">
-		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @SBPL_View_Collection</span>
-		</span>
-</td>
-	<td>
-	</td>
-	<td class="static"><i class="static fa fa-external-link"></i></td>
-</tr>
-	
-<tr class="s-pass" test-id="128" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Verify the Export button functionality <br/><span class="text-muted text-sm">feature to Test the View Collection Screen functionality</span></td>
-	<td>0h 0m 21s+545msc</td>
-	<td>		<span class="category-list attr-x">
-		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @SBPL_View_Collection</span>
-		</span>
-</td>
-	<td>
-	</td>
-	<td class="static"><i class="static fa fa-external-link"></i></td>
-</tr>
-	
-<tr class="s-pass" test-id="141" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Verify the Pagination functionality <br/><span class="text-muted text-sm">feature to Test the View Collection Screen functionality</span></td>
-	<td>0h 0m 45s+990msc</td>
-	<td>		<span class="category-list attr-x">
-		<span class="category badge"><i class="fa fa-tag"></i> @FeatureGroup_Requirement</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @SBPL_View_Collection</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @LoginPage123</span>
 		</span>
 </td>
 	<td>
@@ -397,7 +201,7 @@
 						</div>
 						<div>
 							<span class="item-meta text-xs lt">
-							<span class="badge pass text-pass">8</span> <span class="badge fail text-fail">0</span> <span class="badge skip text-skip">0</span>
+							<span class="badge pass text-pass">1</span> <span class="badge fail text-fail">0</span> <span class="badge skip text-skip">0</span>
 							</span>
 						</div>
 					</div>
@@ -428,7 +232,7 @@
 									        </a>
 								        </li>
 <li><a href="#" class="b-l"><span class="badge badge-pull">ExtentReports</span></a></li>
-<li><a href="#" class="b-l"><span class="badge badge-pull">May 17, 2024 04:09:23 pm</span></a></li>
+<li><a href="#" class="b-l"><span class="badge badge-pull">May 17, 2024 06:30:12 pm</span></a></li>
 <li><a href="#" class="b-l"><span class="badge badge-pull">4.0</span></a></li>
 								    </ul>
 								</div>
